fix text spacing in features + member photo  alignment

--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,16 @@ body {
     align-items: center;
 }
 .team {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
     margin-bottom: 20px;
 }
 .member {
-    width: 100%;
+    width: 28%;
     object-fit: cover;
+    padding: 10px;
 }
 main {
     width: 60%;
@@ -31,6 +33,8 @@ main {
 }
 .header {
     height: 70px;
+    margin-left: 16px;
+    display: inline-block;
 }
 .npc_img {
     width: 50%;
@@ -56,12 +60,12 @@ main {
 .item_desc {
     font-size: 16px;
     margin: 12px;
+    max-width: 300px;
 }
 /*=====Item flipper=====*/
 .flipper-container {
     width: 160px;
     height: 200px;
-    margin: 50px auto;
     overflow: hidden;
     display: inline-block;
     border-radius: 10px;
